{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 164,
  "lineage": "d6482c9d-9db1-df47-311b-c1ad3cb99f72",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ersia_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:411158671563:internet-gateway/igw-03222d4ebc9dad96d",
            "id": "igw-03222d4ebc9dad96d",
            "owner_id": "411158671563",
            "tags": {
              "Name": "t101-igw"
            },
            "tags_all": {
              "Name": "t101-igw"
            },
            "vpc_id": "vpc-0700db122b73ff234"
          },
          "dependencies": [
            "aws_vpc.ersia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ersia_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:411158671563:loadbalancer/app/t101-alb/56228a45f4826dfe",
            "arn_suffix": "app/t101-alb/56228a45f4826dfe",
            "desync_mitigation_mode": "defensive",
            "dns_name": "t101-alb-56454306.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:411158671563:loadbalancer/app/t101-alb/56228a45f4826dfe",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "t101-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e159441850bf68e3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-028cfc6f8d7a7583c"
              },
              {
                "subnet_id": "subnet-0b23c6f7ce25fc54d"
              }
            ],
            "subnets": [
              "subnet-028cfc6f8d7a7583c",
              "subnet-0b23c6f7ce25fc54d"
            ],
            "tags": {
              "Name": "t101-alb"
            },
            "tags_all": {
              "Name": "t101-alb"
            },
            "vpc_id": "vpc-0700db122b73ff234",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.ersia_sg",
            "aws_subnet.ersia_subnet1",
            "aws_subnet.ersia_subnet2",
            "aws_vpc.ersia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ersia_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:411158671563:listener/app/t101-alb/56228a45f4826dfe/64aa3cb15d4d0160",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found - T101 Study",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:411158671563:listener/app/t101-alb/56228a45f4826dfe/64aa3cb15d4d0160",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:411158671563:loadbalancer/app/t101-alb/56228a45f4826dfe",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ersia_alb",
            "aws_security_group.ersia_sg",
            "aws_subnet.ersia_subnet1",
            "aws_subnet.ersia_subnet2",
            "aws_vpc.ersia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "ersia_albrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:411158671563:targetgroup/t101-alb-tg/c158fd8d2fd27d99",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:411158671563:listener-rule/app/t101-alb/56228a45f4826dfe/64aa3cb15d4d0160/0c3de3e969930051",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:411158671563:listener-rule/app/t101-alb/56228a45f4826dfe/64aa3cb15d4d0160/0c3de3e969930051",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:411158671563:listener/app/t101-alb/56228a45f4826dfe/64aa3cb15d4d0160",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ersia_alb",
            "aws_lb_listener.ersia_http",
            "aws_lb_target_group.ersia_albtg",
            "aws_security_group.ersia_sg",
            "aws_subnet.ersia_subnet1",
            "aws_subnet.ersia_subnet2",
            "aws_vpc.ersia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ersia_albtg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:411158671563:targetgroup/t101-alb-tg/c158fd8d2fd27d99",
            "arn_suffix": "targetgroup/t101-alb-tg/c158fd8d2fd27d99",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:411158671563:targetgroup/t101-alb-tg/c158fd8d2fd27d99",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "t101-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0700db122b73ff234"
          },
          "dependencies": [
            "aws_vpc.ersia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "ersia_defaultroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03222d4ebc9dad96d",
            "id": "r-rtb-0cdc3aaf21025464e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cdc3aaf21025464e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ersia_igw",
            "aws_route_table.ersia_rt",
            "aws_vpc.ersia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ersia_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:411158671563:route-table/rtb-0cdc3aaf21025464e",
            "id": "rtb-0cdc3aaf21025464e",
            "owner_id": "411158671563",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03222d4ebc9dad96d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "t101-rt"
            },
            "tags_all": {
              "Name": "t101-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0700db122b73ff234"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ersia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ersia_rt_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2cd4347785e63a9",
            "route_table_id": "rtb-0cdc3aaf21025464e",
            "subnet_id": "subnet-028cfc6f8d7a7583c"
          },
          "dependencies": [
            "aws_route_table.ersia_rt",
            "aws_subnet.ersia_subnet1",
            "aws_vpc.ersia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ersia_rt_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e5cb25721287ded",
            "route_table_id": "rtb-0cdc3aaf21025464e",
            "subnet_id": "subnet-0b23c6f7ce25fc54d"
          },
          "dependencies": [
            "aws_route_table.ersia_rt",
            "aws_subnet.ersia_subnet2",
            "aws_vpc.ersia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ersia_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:411158671563:security-group/sg-0e159441850bf68e3",
            "description": "T101 Study SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e159441850bf68e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "T101 SG",
            "name_prefix": "",
            "owner_id": "411158671563",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0700db122b73ff234"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ersia_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ersia_sginbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2980647202",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e159441850bf68e3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ersia_sg",
            "aws_vpc.ersia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ersia_sgoutbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2099599646",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e159441850bf68e3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ersia_sg",
            "aws_vpc.ersia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ersia_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:411158671563:subnet/subnet-028cfc6f8d7a7583c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028cfc6f8d7a7583c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411158671563",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "t101-subnet1"
            },
            "tags_all": {
              "Name": "t101-subnet1"
            },
            "vpc_id": "vpc-0700db122b73ff234"
          },
          "dependencies": [
            "aws_vpc.ersia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ersia_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:411158671563:subnet/subnet-0b23c6f7ce25fc54d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b23c6f7ce25fc54d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411158671563",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "t101-subnet2"
            },
            "tags_all": {
              "Name": "t101-subnet2"
            },
            "vpc_id": "vpc-0700db122b73ff234"
          },
          "dependencies": [
            "aws_vpc.ersia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ersia_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:411158671563:vpc/vpc-0700db122b73ff234",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0b4c7ad41a03a2c3f",
            "default_route_table_id": "rtb-077765a9e4f89d689",
            "default_security_group_id": "sg-06e8b6de89a02e005",
            "dhcp_options_id": "dopt-af11b7c4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0700db122b73ff234",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-077765a9e4f89d689",
            "owner_id": "411158671563",
            "tags": {
              "Name": "t101-study"
            },
            "tags_all": {
              "Name": "t101-study"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}